# Skimmed_CFG

./: README.md  __init__.py  pyproject.toml  skimmed_CFG.py
